{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 7,
  "lineage": "efb5c879-d2ff-3266-9359-e348345e327f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-02T12:36:31.294-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/947072184123/global/firewalls/default-allow-http-terraform",
            "log_config": [],
            "name": "default-allow-http-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/global/networks/network-instance",
            "priority": 1000,
            "project": "947072184123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/global/firewalls/default-allow-http-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-02T12:36:31.249-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/947072184123/global/firewalls/default-allow-ssh-terraform",
            "log_config": [],
            "name": "default-allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/global/networks/network-instance",
            "priority": 1000,
            "project": "947072184123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/global/firewalls/default-allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi-recurso-google",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/zones/europe-west1-b/disks/webserver-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/947072184123/zones/europe-west1-b/instances/webserver-tf",
            "instance_id": "9046713828932534703",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDC9q2MEU0a/AKJqQFMTZjzL34Oe/xhZmqMBm1B41FEEGGLt6TOGYzz8YPI8e0J6+Efhtk0QaZCrrzmNVv6ZMbn7g/MkVFULqgfFNg9mm6UsBAnqHwM0oD0OnLDWwpwmciVbg3/aEu3+3tkyrOX7JoFLmlqT/Zq6Z/hQKqMVAFC1T8lu/qDCrvIGynfjzVrpmZQEK+Nr2E1uO55I37femXIeP4vRLKNv6t/fU8c8N4YaK46fOBLh87ZQg4IjI7gaKebhAun8+WB78KnoAZvnqZHqCF9nxQlzPEq8wLsQqo5eEIPJqLMeQyN3EvrJRRwmn1FZ723QK7mgypepvSscvFv alex@alex-VirtualBox\n"
            },
            "metadata_fingerprint": "nUT8tvuePr8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install apache2 -y; sudo apt install php7.2-cli -y;",
            "name": "webserver-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.53.219",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/global/networks/network-instance",
                "network_ip": "10.132.0.29",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/regions/europe-west1/subnetworks/network-instance",
                "subnetwork_project": "positive-design-305716"
              }
            ],
            "project": "947072184123",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/positive-design-305716/zones/europe-west1-b/instances/webserver-tf",
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}